# 33_3_register_of_data_on_templates

./: CMakeLists.txt
include/: register.h
src/: CMakeLists.txt  main.cpp
